--- a/nui/index.html
+++ b/nui/index.html
@@ -46,11 +46,11 @@
                             <div class="card mb-3" style="background:rgba(51, 51, 51, 0); color: rgb(0, 0, 0); position: relative; top: 50px; font-size: 20px; border: dashed black;">
                                 <div class="card-header">Account Information</div>
                                 <div class="card-body">
-                                    <p class="card-text" style="color: rgb(0, 0, 0);"><small>
-                                        Account Name: <span id="accountName"></span><br>
-                                        Account Number: <span id="accountNumber"></span><br>
+                                    <p class="card-text" style="color: rgb(0, 0, 0);">
+                                        Account Name: <br> <span id="accountName"></span><br><br>
+                                        Account Number:<br> <span id="accountNumber"></span><br>
                                         <!--Account Sort Code: <span id="accountSortCode">-->
-                                        </span></small></p>
+                                        </span></p>
                                 </div>
                             </div>
                         </div>
@@ -316,19 +316,19 @@
                                         <div class="card-body">
                                             <div class="container-fluid">
                                                 <div class="row">
-                                                    <div class="col-12 content" style="font-size: 16px;">
+                                                    <div class="col-12 content" style="font-size: 20px;">
                                                         <p>You have not yet opened a savings account with QBCore Banks, click the button below to open a personal savings account, with a seperate account number and sort code.</p>
                                                     </div>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-12">
-                                                        <button class="btn btn-block mt-2" style="background:rgba(0, 128, 0, 0); color: rgb(0, 0, 0);" id="openSavings">Open Savings Account</button>
+                                                        <button class="btn btn-block mt-2" style="background:rgba(0, 128, 0, 0); color: rgb(0, 0, 0); font-size: 26px;" id="openSavings">Open Savings Account</button>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="card-footer">
-                                            <p class="card-text"><small>This sections allows you to eaily manage your savings account.</small></p>
+                                            <p class="card-text"><small>Welcome to our non-existent savings account! It's like a real savings account, except without all the pesky interest, security, or functionality. But hey, at least it's free... unless you count the cost to your sanity.</small></p>
                                         </div>
                                     </div>
                                 </div>
